# LEGEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c
src/: CMakeLists.txt  LEGcpu.c  LEGcpu.h  LEGcpu_assembly_code.h
tests/: CMakeLists.txt  test_ALU.c  test_COND.c  test_FUNC.c  test_MEM_STACK.c  test_import_export.c  test_internal.c  test_print.c
